<resources>
    <string name="app_name">Centro de Belleza GALA</string>
    <string name="centro_de_belleza_gala">Centro de Belleza GALA</string>
    <string name="entrar">ENTRAR</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="no_estas_registrado">No estas registrado?</string>
    <string name="registrate">Registrate</string>

</resources>